[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Art/PlayerStats.png" type="Texture" id=1]
[ext_resource path="res://Scripts/CardDraw/PlayerStats.gd" type="Script" id=2]
[ext_resource path="res://Assets/RobotoMono Font/RobotoMono-VariableFont_wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Art/Mod Indicators/Positive.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=11]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.752941, 0.603922, 0.784314, 1 )
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.509804, 0.823529, 0.882353, 1 )
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.933333, 0.690196, 0.54902, 1 )
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.462745, 0.768627, 0.486275, 1 )
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22

[node name="Stats Display" type="Node2D"]
script = ExtResource( 2 )

[node name="IntelMod" type="Button" parent="."]
margin_left = -203.0
margin_top = -116.0
margin_right = -90.9995
margin_bottom = -9.99979
rect_scale = Vector2( 0.592635, 0.592635 )
rect_pivot_offset = Vector2( 49.5728, 49.9955 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/disabled = SubResource( 12 )
disabled = true
text = "+2"
icon = ExtResource( 4 )
clip_text = true
icon_align = 1

[node name="PersMod" type="Button" parent="."]
margin_left = -104.0
margin_top = -117.0
margin_right = 8.00046
margin_bottom = -10.9998
rect_scale = Vector2( 0.592635, 0.592635 )
rect_pivot_offset = Vector2( 49.5728, 49.9955 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/disabled = SubResource( 12 )
disabled = true
text = "+2"
icon = ExtResource( 4 )
clip_text = true
icon_align = 1

[node name="EffiMod" type="Button" parent="."]
margin_left = -5.99954
margin_top = -117.0
margin_right = 106.0
margin_bottom = -10.9998
rect_scale = Vector2( 0.592635, 0.592635 )
rect_pivot_offset = Vector2( 49.5728, 49.9955 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/disabled = SubResource( 12 )
disabled = true
text = "+2"
icon = ExtResource( 4 )
clip_text = true
icon_align = 1

[node name="SkillMod" type="Button" parent="."]
margin_left = 94.0005
margin_top = -117.0
margin_right = 206.0
margin_bottom = -10.9998
rect_scale = Vector2( 0.592635, 0.592635 )
rect_pivot_offset = Vector2( 49.5728, 49.9955 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/disabled = SubResource( 12 )
disabled = true
text = "+2"
icon = ExtResource( 4 )
clip_text = true
icon_align = 1

[node name="Board" type="Sprite" parent="."]
position = Vector2( -1.25754, 8.89221 )
scale = Vector2( 0.677109, 0.642974 )
texture = ExtResource( 1 )

[node name="Intelligence" type="Button" parent="Board"]
margin_left = -267.0
margin_top = -95.0
margin_right = -170.0
margin_bottom = 29.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/disabled = SubResource( 6 )
disabled = true
text = "1"

[node name="Personality" type="Button" parent="Board"]
margin_left = -121.103
margin_top = -95.0
margin_right = -24.1031
margin_bottom = 29.0
rect_pivot_offset = Vector2( 49.1169, 68.728 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/disabled = SubResource( 8 )
disabled = true
text = "1"

[node name="Efficiency" type="Button" parent="Board"]
margin_left = 23.6299
margin_top = -94.8714
margin_right = 120.63
margin_bottom = 29.1286
rect_pivot_offset = Vector2( 496.227, -93.3163 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/disabled = SubResource( 10 )
disabled = true
text = "1"

[node name="Skills" type="Button" parent="Board"]
margin_left = 171.317
margin_top = -96.4266
margin_right = 268.317
margin_bottom = 27.5734
rect_pivot_offset = Vector2( 496.227, -93.3163 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/disabled = SubResource( 9 )
disabled = true
text = "1"

[connection signal="pressed" from="Board/Intelligence" to="." method="_on_Intelligence_pressed"]
[connection signal="pressed" from="Board/Personality" to="." method="_on_Personality_pressed"]
[connection signal="pressed" from="Board/Efficiency" to="." method="_on_Efficiency_pressed"]
[connection signal="pressed" from="Board/Skills" to="." method="_on_Skills_pressed"]
